result/subtask01-helloworld/testcase03.out
/home/share/hw2/input/subtask01-helloworld/testcase03.cpp:1:21: error:  syntax error
     1 |int main(string argv[ ) {
       |                    ^
Total lines: 1
